optimize to reduce the usage of memory allocated in heap

--- a/src/config.json
+++ b/src/config.json
@@ -5,6 +5,9 @@
   "cacheConfig":{
     "blockCacheCount":10
   },
+  "gatherConfig":{
+    "storeRawTrx": false
+  },
   "rpcClientConfig":{
     "dataSource":"rawBlock",
     "btcWallet": {
