optimize to reduce too much memory required

--- a/src/config.json
+++ b/src/config.json
@@ -3,7 +3,7 @@
     "dbDir":"db"
   },
   "cacheConfig":{
-    "blockCacheCount":10
+    "objectCacheWeightMax": 30000000
   },
   "gatherConfig":{
     "storeRawTrx": false
