support the feature of no flushing the cache when quit

--- a/src/config.json
+++ b/src/config.json
@@ -3,6 +3,7 @@
     "dbDir":"db"
   },
   "cacheConfig":{
+    "flushCacheOnQuit": false,
     "samplingBlockCount": 50,
     "objectCacheWeightMax": 800000000
   },
