add rocksdb support

--- a/src/config.json
+++ b/src/config.json
@@ -1,6 +1,7 @@
 {
   "dbConfig":{
-    "dbDir":"db"
+    "dbDir":"db",
+    "dbType":"leveldb"
   },
   "cacheConfig":{
     "flushCacheOnQuit": false,
